# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Made the ftp-anon script return a directory listing when
  anonymous login is allowed. [Gutek, David]

o [NSE] Added the nmap.resolve() function which takes a host name and
  optionally an address family (such as "inet") and returns a table
  containing all of its matching addresses.  If no address family is
  specified, then all of the addresses are returned for the name. [Kris]

o [NSE] Added the nmap.address_family() function which returns the address
  family Nmap is using as a string (e.g., "inet6" is returned if Nmap is
  called with the -6 option). [Kris]

o [NSE] Added the path-mtu script to perform Path MTU Discovery to the
  target host using TCP or UDP. The script tries to conserve bandwidth and
  time by starting with the outgoing interface's MTU and properly handling
  the Next-Hop MTU field in ICMP responses generated by RFC-compliant
  intermediate routers. [Kris]

o [NSE] Scripts can now access the MTU of the host.interface device using
  host.interface_mtu. [Kris]

o Nmap now prints the MTU for interfaces when using --iflist. [Kris]

o [NSE] Removed references to MD2, as OpenSSL 1.x.x doesn't support it anymore
  [alexandru]

o [NSE] Added GIOP library and a small script that makes use of it:
  - giop-info Queries the CORBA naming server for a list of objects
  [Patrik]

o [NSE] Added a Oracle TNS library and two new scripts that make use of it.
  The scripts are:
  - oracle-brute uses the brute and tns library to perform password guessing
  - oracle-enum-users attempts to determine valid Oracle user names
  [Patrik]

o [NSE] Added a smallish Lotus Domino rpc library (nrpc.lua) and some Lotus
  Domino oriented scripts:
  - domino-enum-users guesses users and attempts to download ID files by
                      exploiting (CVE-2006-5835).
  - domino-enum-passwords attempts to download Internet passwords and ID files
                          from the web server.